--- a/sites-available/drupal7.conf
+++ b/sites-available/drupal7.conf
@@ -34,6 +34,9 @@ location = /robots.txt {
 ## .htaccess. Disable access to any code files. Return a 404 to curtail
 ## information disclosure. Hide also the text files.
 location ~* ^.+(\.(?:htaccess|engine|inc|info|install|module|profile|po|sh|.*sql|theme|tpl(?:\.php)?|xtmpl)|code-style\.pl|/Entries.*|/Repository|/Root|/Tag|/Template)$ {
+# DANGER! i COMMENT OUT THE ..PHP AND .TPL 
+# QUICK AND DIRTY FIX FOR LAOGE
+#location ~* ^.+(\.(?:htaccess|engine|inc|info|install|module|profile|po|sh|.*sql|theme|tpl(?:\.php)?|xtmpl)|code-style\.pl|/Entries.*|/Repository|/Root|/Tag|/Template)$ {
     return 404; 
 }
 
