--- a/sites-available/vhosts/iyangcong.conf
+++ b/sites-available/vhosts/iyangcong.conf
@@ -5,9 +5,14 @@
         #access_log  off;
         root   /var/www/iyangcong.com/;
         index  index.html;
+        autoindex on;
 
         location ~* .+\.(png|jpg|gif|jpeg|css|js|ico|flv|swf|mp3)$ {
         expires max;
+        }
+        location ~* pingyao {
+          auth_basic           "username and passowrd please";
+          auth_basic_user_file passwd/htpasswd;
         }
 
    }
