--- a/sites-available/vhosts/search.2u4u.conf
+++ b/sites-available/vhosts/search.2u4u.conf
@@ -8,7 +8,8 @@ server 	{
 	proxy_pass $scheme://129.0.0.48:9080$request_uri;
 	# doesn't seem to work?
 	#allow	192.168.12.0/24;
-	#deny	all;
+	allow	127.0.0.1;
+	deny	all;
 	}
 	access_log logs/proxy.log;
 }
