periodically check in

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,6 @@
 # -*- mode: nginx; mode: flyspell-prog; mode: autopair; ispell-local-dictionary: "american" -*-
 user www-data;
+#user fltrp;
 worker_processes  2;
 
 # bxy: set error_log to crit to minimize log file size
