--- a/sites-available/vhosts/ishare.flearning.cn.conf
+++ b/sites-available/vhosts/ishare.flearning.cn.conf
@@ -8,4 +8,8 @@ server {
   location / {
     proxy_pass http://apache;
   }
+  location /todo {
+    auth_basic      "给个密码先";
+    auth_basic_user_file    passwd/htpasswd;
+  }
 } # HTTP server
