--- a/sites-available/vhosts/ienglish20.conf
+++ b/sites-available/vhosts/ienglish20.conf
@@ -1,7 +1,7 @@
   server {
 	      listen	      80;
         server_name   ienglish20.com;
-        root         /var/www/ienglish20/;
+        root         /var/www/ienglish/;
         index        index.php index.html;
     
 
