@kidslib uses nginx proxy_cache

--- a/sites-available/vhosts/kidslib.fltrp.com.conf
+++ b/sites-available/vhosts/kidslib.fltrp.com.conf
@@ -2,13 +2,21 @@ server 	{
 	listen 80;
 	access_log logs/proxy.log;
 	server_name kidslib.fltrp.com;
-    	location / {
-	    #resolver 8.8.8.8;
-	    # 404: don't use http:// , or https won't be proxied
-	    #proxy_pass http://$host$request_uri;
-	    proxy_pass $scheme://129.0.0.47$request_uri;
-	    # doesn't seem to work?
-	    #allow	192.168.12.0/24;
-	    #deny	all;
-	    }
+     location / {
+	   # 404: don't use http:// , or https won't be proxied
+	   #proxy_pass http://$host$request_uri;
+	   proxy_pass $scheme://129.0.0.47$request_uri;
+	   }
+     # cache static files 
+     location ~ .*\.(mp3|gif|jpg|png|htm|html|css|js|flv|ico|swf)(.*)$ {
+         proxy_pass $scheme://129.0.0.47$request_uri;
+         proxy_redirect off;
+         proxy_set_header Host $host;
+         proxy_cache cache;
+         # bai:  i already set cache headers in apache@egs
+         #proxy_cache_valid 200 302 1h;
+         #proxy_cache_valid 301 1d;
+         #proxy_cache_valid any 1m;
+         expires 365d;
+     }
 }
