--- a/sites-available/vhosts/others/py.conf
+++ b/sites-available/vhosts/others/py.conf
@@ -8,41 +8,40 @@ server {
     server_name www.rijiben.org;
     rewrite ^ $scheme://rijiben.org$request_uri? permanent;
 } # server domain rewrite.
-
-
 ## HTTP server.
 server {
     listen 80;
     server_name pengyou.rijiben.org;
     limit_conn arbeit 16;
-
     ## Disable all methods besides HEAD, GET and POST.
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
         return 444;
     }
-
     root  /var/www/octopress/newpy.org/;
-    #index index.php index.html;
     index index.html;
     autoindex on;
     charset utf-8;
-
 } # HTTP server
-
-
-
 server {
     listen 80;
     server_name rijiben.org;
     limit_conn arbeit 16;
-
     ## Disable all methods besides HEAD, GET and POST.
     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
         return 444;
     }
-
     root  /var/www/octopress/rjb.org/;
+    index index.html;
+} # HTTP server
+server {
+    listen 80;
+    server_name gaolewen.com;
+    limit_conn arbeit 16;
+    ## Disable all methods besides HEAD, GET and POST.
+    if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+        return 444;
+    }
+    root  /var/www/octopress/glw/;
     #index index.php index.html;
     index index.html;
-
 } # HTTP server
