--- a/sites-available/vhosts/others/py.conf
+++ b/sites-available/vhosts/others/py.conf
@@ -8,6 +8,12 @@ server {
     server_name www.rijiben.org;
     rewrite ^ $scheme://rijiben.org$request_uri? permanent;
 } # server domain rewrite.
+server {
+    ## This is to avoid the spurious if for sub-domain name
+    ## rewriting. See http://wiki.nginx.org/Pitfalls#Server_Name.
+    server_name www.hcwdxx.com;
+    rewrite ^ $scheme://www.hubeiwudao.ccoo.cn$request_uri? permanent;
+}
 ## HTTP server.
 server {
     listen 80;
