add m.itest, viaton.com.cn

--- a/sites-available/vhosts/ilearning.cn.conf
+++ b/sites-available/vhosts/ilearning.cn.conf
@@ -1,4 +1,3 @@
- 
 ## HTTP server.
  server {
      listen 80;
@@ -13,13 +12,29 @@
          return 444;
      }
  
-     root  /var/www/ilearning/;
-     index index.php index.html;
- 
+     #root  /var/www/ilearning/;
+     #index index.php index.html;
 
      ## For D7. Use this instead.
-     include sites-available/drupal7.conf;
- 
-  
- } # HTTP server
+     #include sites-available/drupal7.conf;
 
+    location / {
+           # 404: don't use http:// , or https won't be proxied
+           #proxy_pass http://$host$request_uri;
+           #proxy_pass $scheme://127.0.0.1:8080$request_uri;
+           proxy_pass http://apache;
+           }
+     # cache static files
+     #location ~ .*\.(mp3|gif|jpg|png||css|js|flv|ico|swf)(.*)$ {
+         #proxy_pass $scheme://129.0.0.47$request_uri;
+         #proxy_redirect off;
+         #proxy_set_header Host $host;
+         #proxy_cache cache;
+         # bai:  i already set cache headers in apache@egs
+         #proxy_cache_valid 200 302 1h;
+         #proxy_cache_valid 301 1d;
+         #proxy_cache_valid any 1m;
+         #expires 365d;
+    #}
+
+ } # HTTP server
