--- a/sites-available/drupal.conf
+++ b/sites-available/drupal.conf
@@ -72,7 +72,7 @@ location = /favicon.ico {
 }
 
 ## All static files will be served directly.
-location ~* ^.+\.(?:css|js|jpg|jpeg|gif|ico|png|html|xml)$ {
+location ~* ^.+\.(?:css|js|jpg|jpeg|gif|ico|png|xml)$ {
     access_log        off;
     expires           30d;
 }
