--- a/sites-available/vhosts/kidslib.fltrp.com.conf
+++ b/sites-available/vhosts/kidslib.fltrp.com.conf
@@ -1,22 +1,37 @@
 server 	{
+
 	listen 80;
 	access_log logs/proxy.log;
 	server_name kidslib.fltrp.com;
+  root /var/www/ilearning/;
+  index index.html;
+
      location / {
-	   # 404: don't use http:// , or https won't be proxied
-	   #proxy_pass http://$host$request_uri;
-	   proxy_pass $scheme://129.0.0.47$request_uri;
+       # ref: http://nginx.org/en/docs/http/ngx_http_core_module.html#satisfy
+       satisfy any;
+       allow 222.178.152.29;
+       allow 192.168.23.0/254;
+       allow 192.168.23.252;
+       deny all ;
+       auth_basic "Tell me who you are";
+       auth_basic_user_file  passwd/htpasswd;
+
+  	   # 404: don't use http:// , or https won't be proxied
+  	   #proxy_pass http://apache;
+  	   #proxy_pass http://$host$request_uri;
+  	   proxy_pass $scheme://129.0.0.478080$request_uri;
 	   }
+
      # cache static files 
      location ~ .*\.(mp3|gif|jpg|png|htm|html|css|js|flv|ico|swf)(.*)$ {
-         proxy_pass $scheme://129.0.0.47$request_uri;
-         proxy_redirect off;
-         proxy_set_header Host $host;
+         proxy_pass $scheme://129.0.0.47:8080$request_uri;
+         #proxy_redirect off;
+         #proxy_set_header Host $host;
          proxy_cache cache;
          # bai:  i already set cache headers in apache@egs
-         #proxy_cache_valid 200 302 1h;
-         #proxy_cache_valid 301 1d;
-         #proxy_cache_valid any 1m;
+         proxy_cache_valid 200 302 1h;
+         proxy_cache_valid 301 1d;
+         proxy_cache_valid any 1m;
          expires 365d;
      }
 }
