kidslib改用虚拟机

--- a/sites-available/vhosts/kidslib.fltrp.com.conf
+++ b/sites-available/vhosts/kidslib.fltrp.com.conf
@@ -18,7 +18,7 @@ server 	{
 
   	   # 404: don't use http:// , or https won't be proxied
   	   #proxy_pass http://apache;
-  	   #proxy_pass http://$host$request_uri;
+       proxy_set_header Host $host;
   	   proxy_pass $scheme://129.0.0.478080$request_uri;
 	   }
 
@@ -26,12 +26,12 @@ server 	{
      location ~ .*\.(mp3|gif|jpg|png|htm|html|css|js|flv|ico|swf)(.*)$ {
          proxy_pass $scheme://129.0.0.47:8080$request_uri;
          #proxy_redirect off;
-         #proxy_set_header Host $host;
-         proxy_cache cache;
+         proxy_set_header Host $host;
+         #proxy_cache cache;
          # bai:  i already set cache headers in apache@egs
-         proxy_cache_valid 200 302 1h;
-         proxy_cache_valid 301 1d;
-         proxy_cache_valid any 1m;
+         #proxy_cache_valid 200 302 1h;
+         #proxy_cache_valid 301 1d;
+         #proxy_cache_valid any 1m;
          expires 365d;
      }
 }
