kidslib增加ip白名单

--- a/sites-available/vhosts/kidslib.fltrp.com.conf
+++ b/sites-available/vhosts/kidslib.fltrp.com.conf
@@ -9,9 +9,30 @@ server 	{
      location / {
        # ref: http://nginx.org/en/docs/http/ngx_http_core_module.html#satisfy
        satisfy any;
+       # 这是谁的ip呢？
        allow 222.178.152.29;
-       allow 192.168.23.0/254;
-       allow 192.168.23.252;
+      # 转换工具
+      # http://ip2cidr.com/
+
+      # 北京西城区图书馆，IP段203.86.68.33-203.86.68.40 
+      allow  203.86.68.33/32;
+      allow  203.86.68.34/31;
+      allow  203.86.68.36/30;
+      allow  203.86.68.40/32;
+
+      # 下面地址表示192.168.23.0-254
+      allow  192.168.23.0/25;
+      allow  192.168.23.128/26;
+      allow  192.168.23.192/27;
+      allow  192.168.23.224/28;
+      allow  192.168.23.240/29;
+      allow  192.168.23.248/30;
+      allow  192.168.23.252/31;
+      allow  192.168.23.254/32;
+ 
+      # 承德市图书馆  
+      allow 121.26.192.106;
+
        deny all ;
        auth_basic "Tell me who you are";
        auth_basic_user_file  passwd/htpasswd;
@@ -27,7 +48,7 @@ server 	{
          proxy_pass $scheme://129.0.0.47:8080$request_uri;
          #proxy_redirect off;
          proxy_set_header Host $host;
-         #proxy_cache cache;
+         proxy_cache cache;
          # bai:  i already set cache headers in apache@egs
          #proxy_cache_valid 200 302 1h;
          #proxy_cache_valid 301 1d;
