增加湖北图书馆ip

--- a/sites-available/vhosts/kidslib.fltrp.com.conf
+++ b/sites-available/vhosts/kidslib.fltrp.com.conf
@@ -11,14 +11,34 @@ server 	{
        satisfy any;
        # 这是谁的ip呢？
        allow 222.178.152.29;
-      # 转换工具
-      # http://ip2cidr.com/
+       # 转换工具
+       # http://ip2cidr.com/
 
       # 北京西城区图书馆，IP段203.86.68.33-203.86.68.40 
       allow  203.86.68.33/32;
       allow  203.86.68.34/31;
       allow  203.86.68.36/30;
       allow  203.86.68.40/32;
+
+      # 湖北省图书馆 shaoye 2013-05-14
+      allow 111.4.122.23/32
+      allow 111.4.122.24/29
+      allow 111.4.122.32/27
+      allow 111.4.122.64/28
+      allow 111.4.122.80/30
+      allow 111.4.122.84/31
+      allow 111.4.122.86/32
+      allow 27.17.61.98/31
+      allow 27.17.61.100/30
+      allow 27.17.61.104/29
+      allow 27.17.61.112/29
+      allow 27.17.61.120/30
+      allow 27.17.61.124/31
+      allow 27.17.61.126/32
+
+      # 承德市图书馆  
+      allow 121.26.192.106;
+
 
       # 下面地址表示192.168.23.0-254
       allow  192.168.23.0/25;
@@ -30,9 +50,6 @@ server 	{
       allow  192.168.23.252/31;
       allow  192.168.23.254/32;
  
-      # 承德市图书馆  
-      allow 121.26.192.106;
-
        deny all ;
        auth_basic "Tell me who you are";
        auth_basic_user_file  passwd/htpasswd;
